Changed site links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homestyles.css">
+    <link rel="stylesheet" href="visitAlbayblog_home/homestyles.css">
     <title>visitAlbayblog.</title>
 </head>
 <body>
@@ -12,13 +12,13 @@
             <header>
                 <nav>
                     <ul class="nav-header">
-                        <li><a href="visitAlbayblog_home/home.html" class="active">Home</a></li>
+                        <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="travel_tips/travelTips.html" >Travel Tips</a></li>
                         <li><a href="about_us/aboutUs.html">About Us</a></li>
                     </ul>
                     <span class="discover">Discover the beauty of Albay</span>
                     <a href="https://example.com">
-                        <img class="tourismlogo" src="tourismlogo2.png"/></a>
+                        <img class="tourismlogo" src="visitAlbayblog_home/tourismlogo2.png"/></a>
                 </nav>
             </header>
         </div>
@@ -26,39 +26,39 @@
             <nav>
                 <ul class="nav-places">
                     <li><a href="cagsawaRuins/cagsawaRuins.html">
-                        <img class="placepic" src="cagsawaRuins.png"/>
+                        <img class="placepic" src="visitAlbayblog_home/cagsawaRuins.png"/>
                         <span class="place">Cagsawa Ruins</span></a>
                     </li>
                     <li><a href="lignonHills/lignonHills.html">
-                        <img class="placepic" src="lignonHills.png"/></a>
+                        <img class="placepic" src="visitAlbayblog_home/lignonHills.png"/></a>
                         <span class="place">Lignon Hills</span>
                     </li>
                     <li><a href="farmPlate/farmPlate.html">
-                        <img class="placepic" src="farmPlate.png"/></a>
+                        <img class="placepic" src="visitAlbayblog_home/farmPlate.png"/></a>
                         <span class="place">Farm Plate</span>
                     </li>
                     <li><a href="kawaKawaPark/kawaKawaPark.html">
-                        <img class="placepic" src="kawaKawaPark.png"/></a>
+                        <img class="placepic" src="visitAlbayblog_home/kawaKawaPark.png"/></a>
                         <span class="place">Kawa Kawa Park</span>
                     </li>
                     <li><a href="sumlangLake/sumlangLake.html">
-                        <img class="placepic" src="sumlangLake.png"/></a>
+                        <img class="placepic" src="visitAlbayblog_home/sumlangLake.png"/></a>
                         <span class="place">Sumlang Lake</span>
                     </li>
                 </ul>
             </nav>
-            <img class="navigation" src="navigation 1.svg"></img>
+            <img class="navigation" src="visitAlbayblog_home/navigation 1.svg"></img>
             <p> Trending Destinations </p>
         </div>
         <div class="main">
-            <img class="background" src="background.png"/>
-            <img class="overlap" src="removedbg.png"/>
+            <img class="background" src="visitAlbayblog_home/background.png"/>
+            <img class="overlap" src="visitAlbayblog_home/removedbg.png"/>
             <span class="title">visitAlbayblog.</span>
             <div class="rectangle"></div>
         </div>
         <div class="bottompart">
             <video class="video" autoplay muted loop>
-                <source src="video.mp4" type="video/mp4">
+                <source src="visitAlbayblog_home/video.mp4" type="video/mp4">
             </video>
             <div class="video-text">
                 <div class="wonder">wondering where to visit next?</div>
@@ -78,19 +78,19 @@
             a breathtaking backdrop for adventure seekers and 
             nature enthusiasts.
          </h6>
-        <img class="albaylogo" src="albaylogo.png"/>
+        <img class="albaylogo" src="visitAlbayblog_home/albaylogo.png"/>
        </div>
     </div>
     <footer>
         <span class="footer-text">visitAlbayblog. &copy; 2023 
         <a href="https://example.com"> 
-             <img class="facebook" src="facebook.svg"/></a>
+             <img class="facebook" src="visitAlbayblog_home/facebook.svg"/></a>
         <a href="https://example.com"> 
-               <img class="instagram" src="instagram.svg"/></a>
+               <img class="instagram" src="visitAlbayblog_home/instagram.svg"/></a>
         <a href="https://example.com"> 
             <img class="x" src="x.svg"/></a>
         <a href="https://example.com"> 
-            <img class="youtube" src="youtube.svg"/></a>
+            <img class="youtube" src="visitAlbayblog_home/youtube.svg"/></a>
         <div class="albaywebsite">Check the 
             <a href="https://albay.gov.ph/" target="_blank"> Province of Albay</a> 
             website for recent updates and other information.</div>
