--- a/about_us/aboutUs.html
+++ b/about_us/aboutUs.html
@@ -12,9 +12,9 @@
             <header>
                 <nav>
                     <ul class="nav-header">
-                        <li><a href="../visitAlbayblog_home/home.html"> <img class="backarrow" src="arrow-right-circle.svg"/> </a></li>
-                        <li><a href="../visitAlbayblog_home/home.html" >Back Home</a></li>
-                        <li><a href="../travel_tips/travelTips.html">Travel Tips</a></li>
+                        <li><a href="../index.html"> <img class="backarrow" src="arrow-right-circle.svg"/> </a></li>
+                        <li><a href="../index.html">Back Home</a></li>
+                        <li><a href="../travel_tips/travelTips.html" >Travel Tips</a></li>
                         <li><a href="../about_us/aboutUs.html" class="active">About Us</a></li>
                     </ul>
                     <span class="discover">Discover the beauty of Albay</span>
