--- a/travel_tips/travelTips.html
+++ b/travel_tips/travelTips.html
@@ -12,8 +12,8 @@
             <header>
                 <nav>
                     <ul class="nav-header">
-                        <li><a href="../visitAlbayblog_home/home.html"> <img class="backarrow" src="arrow-right-circle.svg"/> </a></li>
-                        <li><a href="../visitAlbayblog_home/home.html">Back Home</a></li>
+                        <li><a href="../index.html"> <img class="backarrow" src="arrow-right-circle.svg"/> </a></li>
+                        <li><a href="../index.html">Back Home</a></li>
                         <li><a href="../travel_tips/travelTips.html" class="active">Travel Tips</a></li>
                         <li><a href="../about_us/aboutUs.html">About Us</a></li>
                     </ul>
